Lock.tryLock still failing (MonitorLockTest shows why).